week 4 close to done